SwitchLabeled fixes:
* On active SwitchLabeled components, hovering over the text causes
the handle to lose its background color. The switch should have the
same hover state whether the user is hovering over the switch or text.

* Currently lucid-SwitchLabled has a flex set to 0 0 50px. This causes
the label to be too far from the switch. Let's update the flex to 0 0 40px.

--- a/src/components/SwitchLabeled/SwitchLabeled.less
+++ b/src/components/SwitchLabeled/SwitchLabeled.less
@@ -26,7 +26,6 @@
 		}
 
 		.@{prefix}-Switch-visualization-handle {
-			background-color: @color-white;
 			border: 1px solid @color-primary;
 		}
 	}
